--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
         <article>
             <h2>My Skills</h2>
                 <p>
-                    I have adapted many skills in my life span. I have skills in soccer, volleyball, and track. I find myself very athletic and go good with these types of sports.
-                    I also can work good with technology due to the ATM program which you will read more about later on. I work good in groups and like to interact and help
-                    people through hard situations. I feel that I manage to go above and beyond with my work and like to achieve high grades
+                    I have adapted many skills during my life span. I have skills in soccer, volleyball, and track. I find myself very athletic and go good with these types of sports.
+                    I am also good at technology due to the ATM program which you will read more about later. I work good in groups and feel that I can interact and help
+                    people through hard situations. I feel that I manage to go above and beyond with my work I can achieve high grade.
                 </p>
             <div><img class="image" src="images/Quote.jpg" width="200"alt="An inspiring quote image"></div>
             </article>
