--- a/ATM.html
+++ b/ATM.html
@@ -52,18 +52,24 @@
 <div><img class="absolute" src="images/Magazine Cover.jpg" width="200" alt="Image of Magazine Cover"></div>
 
 <article>
-<h2>8th grade learning</h2>
+    <h2>8th grade learning</h2>
 
-<ul>
-    <li>Coding</li>
-    <li>Creating Websites</li>
-    <li>Typing</li>
-    <li>HTML and CSS</li>
-    <li>Plenty more to come</li>
-</ul>
+    <ul>
+        <li>Coding</li>
+        <li>Creating Websites</li>
+        <li>Typing</li>
+        <li>HTML and CSS</li>
+        <li>Plenty more to come</li>
+    </ul>
 </article>
-
 <div><img class="absolute" src= "images/BlogTheme.jpg" width="260" alt="This is a webisite that I create that was a blog about ATM"></div>
+
+<h2>Reflection</h2>
+        <p>ATM is a fun program that helps you evolve with technology.
+            With technology growing and advancing rapidly it is important to be able to keep up and understand everything going on.
+            The ATM program with helped me out so much in other classes and outside of school. I did not realize how much I didn’t 
+            know about computers until I came to this program. ATM has helped me in so many different ways and I am excited to see what it brings for me in the future.
+</p>
 
 
 
