--- a/Volleyball.html
+++ b/Volleyball.html
@@ -37,3 +37,4 @@
             </p>
 </article>
     <div><img class="absolute" src= "images/Volleyball.jpg" width="330" alt="Image of a Hawaii Postcard"></div>
+        <div><img class="absolute" src= "images/Volleyball copy.jpg" width="330" alt="Image of a volleyball."></div>
