--- a/ATM.html
+++ b/ATM.html
@@ -23,7 +23,8 @@
             </header>
 
 
-<article><h2>6th grade learning</h2>
+<article>
+    <h2>6th grade learning</h2>
     <ul>
         <li>Typing</li>
         <li>Microsoft Word</li>
@@ -39,21 +40,20 @@
 
     <ul>
 
-     <li>SketchUp</li>
-     <li>Photoshop</li>
-     <li>Illustrator</li>
-     <li>Indesign</li>
-    <li>Coding</li>
-    <li>Business Cards</li>
-    <li>Magazine Covers</li>
-   <li>Typing</li></br>
-    </ul>
+       <li>SketchUp</li>
+       <li>Photoshop</li>
+       <li>Illustrator</li>
+       <li>Indesign</li>
+       <li>Coding</li>
+       <li>Business Cards</li>
+       <li>Magazine Covers</li>
+       <li>Typing</li>
+        </ul>
 </article>
 <div><img class="absolute" src="images/Magazine Cover.jpg" width="200" alt="Image of Magazine Cover"></div>
 
 <article>
     <h2>8th grade learning</h2>
-
     <ul>
         <li>Coding</li>
         <li>Creating Websites</li>
@@ -65,7 +65,7 @@
 <div><img class="absolute" src= "images/BlogTheme.jpg" width="260" alt="This is a webisite that I create that was a blog about ATM"></div>
 
 <h2>Reflection</h2>
-        <p>ATM is a fun program that helps you evolve with technology.
+<p>ATM is a fun program that helps you evolve with technology.
             With technology growing and advancing rapidly it is important to be able to keep up and understand everything going on.
             The ATM program with helped me out so much in other classes and outside of school. I did not realize how much I didn’t 
             know about computers until I came to this program. ATM has helped me in so many different ways and I am excited to see what it brings for me in the future.
