--- a/Volleyball.html
+++ b/Volleyball.html
@@ -21,20 +21,22 @@
                 </ul>
             </header>
 <article>
-<div> <h2>Jump, Set, Spike</h2></div>
+    <div> 
+        <h2>Jump, Set, Spike</h2>
+    </div>
     <p>
             I have always thought of playing volleyball. 
             My parents both played volleyball when the were younger and they still do now. 
             It was always in my blood and was usually encouraged to try. 
-            At the time I was playing soccer and didn’t want to change from that. 
+            At the time I was playing soccer and didn’t want to change from that it was my first sport and I loved it. 
             I started to realized that volleyball was the right sport for me when I would play beach volleyball. 
             I played with my dad's experienced friends and although I wasn’t close to as good as them I kept up pretty well. 
-            In my 8th grade year and I got onto the school volleyball team and didn’t care if I didn’t make it. 
+            In my 8th grade year and I got onto the school volleyball team and was very happy to see my name on the list. 
             Here’s where my passion blossomed, every practice we had I got more into the sport and understood it a lot more.
-             We won games and I am happy to say that I got to play alot and learn from the better players on my team. 
-             I developed a want to play and have joined a club team to keep progressing and practicing the sport.
-              I plan on playing this sport in future schools and clubs.
-            </p>
+            We won games and I am happy to say that I got to play alot and learn from the better players on my team. 
+            As the season went on I discovered a large want to play and have joined a club team to keep progressing and practicing the sport.
+            I plan on playing this sport in future schools and clubs.
+     </p>
 </article>
     <div><img class="absolute" src= "images/Volleyball.jpg" width="330" alt="Image of a Hawaii Postcard"></div>
-        <div><img class="absolute" src= "images/Ball.jpg" width="330" alt="Image of a volleyball."></div>
+    <div><img class="absolute" src= "images/Ball.jpg" width="330" alt="Image of a volleyball."></div>
