--- a/Volleyball.html
+++ b/Volleyball.html
@@ -22,7 +22,7 @@
             </header>
 <article>
     <div> 
-        <h2>Jump, Set, Spike</h2>
+        <h2>Bump, Set, Spike</h2>
     </div>
     <p>
             I have always thought of playing volleyball. 
