--- a/Volleyball.html
+++ b/Volleyball.html
@@ -5,7 +5,7 @@
             <link href="#" rel="stylesheet">
             <meta charset="utf-8">
             <title>Tech by Mikena</title>
-            <link href="https://fonts.googleapis.com/css?family=Oxygen|Quicksand" rel="stylesheet">
+           <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
             <link href="https://fonts.googleapis.com/css?family=Dosis:800" rel="stylesheet">
         </head>
     
