--- a/ATM.html
+++ b/ATM.html
@@ -3,10 +3,11 @@
     <html>
         <head>
             <link href="app.css" rel="stylesheet"/>
-            <link href="#" rel="stylesheet">
+            <link href="#" rel="stylesheet"/>
             <meta charset="utf-8">
             <title>Tech by Mikena</title>
             <link href="https://fonts.googleapis.com/css?family=Quicksand" rel="stylesheet">
+            <link href="https://fonts.googleapis.com/css?family=Oxygen" rel="stylesheet">
             <link href="https://fonts.googleapis.com/css?family=Dosis:800" rel="stylesheet">
         </head>
     
