--- a/Future.html
+++ b/Future.html
@@ -6,6 +6,7 @@
             <meta charset="utf-8">
             <title>Tech by Mikena</title>
             <link href="https://fonts.googleapis.com/css?family=Oxygen|Quicksand" rel="stylesheet">
+            <link href="https://fonts.googleapis.com/css?family=Oxygen" rel="stylesheet">
             <link href="https://fonts.googleapis.com/css?family=Dosis:800" rel="stylesheet">
         </head>
     
