--- a/ATM.html
+++ b/ATM.html
@@ -14,7 +14,7 @@
         <body>
             <header>
                 <img id="header-pic" src="images/Me.jpg" alt="An image of me" width="120">
-                <br><h1>Mikena's Website</h1></br>
+             <h1>Mikena's Website</h1>
                     <ul>
                         <li class="bar"><a href="index.html">Homepage</a></li>
                         <li class="bar"><a href="ATM.html">ATM</a></li>
