--- a/ATM.html
+++ b/ATM.html
@@ -64,8 +64,22 @@
         <li> Video Production</li>
     </ul>
 </article>
+ 
+    <article>
+        <h1>Video Production Reflection</h1>
+            <p>This unit has been filled with fun projects that have really expanded my learning about films.
+                By using IMovie I was able to edit films like I never have before. This was very new to me and 
+                I was able to use techniques that helped make my film look very professional. When I first
+                went into garage band it looked like a bunch of scary buttons, but now as I use it I can explain
+                a lot of them. It was fun and challenging learning about music because you want all the sounds to 
+                match up perfectly. My class also took a cartoon and put background music and sound effects into it. 
+                This was really amazing to see the film come more and more to life as more music and effects were added
+                to the scenes.
+            </p>
+    
+    </article>
     <div><iframe width="560" height="315" src="https://www.youtube.com/embed/RnqGcPCKT1s" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
-
+<div><iframe src="https://drive.google.com/file/d/14krCCjj9bKHgDoUwZwhs7DnUx-SgKW5-/preview" width="640" height="480"></iframe></div>
 
 <h2>Reflection</h2>
 <p>     ATM is a fun program that helps you evolve with technology.
